--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SPTK"]
 	path = SPTK
 	url = https://github.com/sp-nitech/SPTK.git
+[submodule "praat"]
+	path = praat
+	url = https://github.com/praat/praat.github.io.git
